--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@
 
 .vscode-highlight-line {
   display: inline-block;
+  box-sizing: border-box;
   width: 100%;
   padding-left: 1.5rem;
   padding-left: var(--vscode-highlight-padding-left);
