--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
 }
 
 .grvsc-code {
-  display: inline-table;
+  display: table;
 }
 
 .grvsc-line {
@@ -37,6 +37,10 @@
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
+}
+
+.grvsc-gutter::before {
+  content: attr(data-content);
 }
 
 .grvsc-source {
