pick default red/green colors for diff line highlighting

--- a/styles.css
+++ b/styles.css
@@ -70,12 +70,12 @@
     var(--grvsc-line-highlighted-border-color, transparent);
 }
 
-.grvsc-line-diff-add {
-  background-color: var(--grvsc-line-diff-add-background-color, transparent);
+.grvsc-line-diff-add::before {
+  background-color: var(--grvsc-line-diff-add-background-color, rgba(0, 255, 60, 0.4));
 }
 
-.grvsc-line-diff-del {
-  background-color: var(--grvsc-line-diff-del-background-color, transparent);
+.grvsc-line-diff-del::before {
+  background-color: var(--grvsc-line-diff-del-background-color, rgba(255, 0, 20, 0.4));
 }
 
 .grvsc-line-number {
