--- a/styles.css
+++ b/styles.css
@@ -66,8 +66,7 @@
 
 .grvsc-line-highlighted::before {
   background-color: var(--grvsc-line-highlighted-background-color, transparent);
-  box-shadow: inset var(--grvsc-line-highlighted-border-width, 4px) 0 0 0
-    var(--grvsc-line-highlighted-border-color, transparent);
+  box-shadow: inset var(--grvsc-line-highlighted-border-width, 4px) 0 0 0 var(--grvsc-line-highlighted-border-color, transparent);
 }
 
 .grvsc-line-diff-add::before {
